raw implementation of basic scope

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,2 +1,9 @@
 @import "scaffolding";
 @import "animations";
+@import "blocks/intro";
+@import "blocks/button";
+@import "blocks/main";
+@import "blocks/content";
+@import "blocks/cards";
+@import "blocks/card";
+@import "blocks/scene";
