feat: implement page/level choise

--- a/src/sass/blocks/card.scss
+++ b/src/sass/blocks/card.scss
@@ -8,6 +8,7 @@
   background: rgba(120, 120, 200, 0.5);
   border: 1px solid #000000;
   border-radius: 0.5em;
+  cursor: pointer;
 
   &:before {
     position: absolute;
