--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,7 @@
 @import "scaffolding";
 @import "animations";
 @import "blocks/intro";
+@import "blocks/header";
 @import "blocks/button";
 @import "blocks/main";
 @import "blocks/content";
