--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -9,11 +9,12 @@
   align-items: center;
 
   &__label {
+    line-height: 1;
     text-align: center;
-    margin: 1em;
+    margin: 0 1em;
 
     &_level {
-      width: 20vw;
+      width: 30vw;
     }
 
     &_pack {
@@ -27,18 +28,30 @@
     &_level {
 
       &[type=range]::-webkit-slider-thumb {
-        height: 4vw;
-        width: 4vw;
-        margin-top: -1.7vw;
+        height: 20px;
+        width: 20px;
+        margin-top: -8px;
+      }
+
+      &[type=range]::-moz-range-thumb {
+        height: 20px;
+        width: 20px;
+        margin-top: -8px;
       }
     }
 
     &_pack {
 
       &[type=range]::-webkit-slider-thumb {
-        height: 3vw;
-        width: 3vw;
-        margin-top: -1.2vw;
+        height: 15px;
+        width: 15px;
+        margin-top: -6px;
+      }
+
+      &[type=range]::-moz-range-thumb {
+        height: 15px;
+        width: 15px;
+        margin-top: -6px;
       }
     }
 
@@ -47,6 +60,6 @@
 
 @media (max-width: 639px) {
   .header {
-    height: 40px;
+    height: 45px;
   }
 }
