--- a/src/sass/blocks/header.scss
+++ b/src/sass/blocks/header.scss
@@ -7,6 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: #87c8fa;
+  border-bottom: 2px solid #000000;
 
   &__label {
     line-height: 1;
