--- a/src/sass/blocks/scene.scss
+++ b/src/sass/blocks/scene.scss
@@ -16,15 +16,16 @@
   &__translation {
     margin: 0;
     padding: 0;
-    max-width: 100%;
+    width: 100%;
+    height: 1em;
     overflow: hidden;
     font-size: 1.5em;
     font-weight: bold;
     text-align: center;
 
     &_game {
-      padding-left: 2em;
       background: url("/src/img/microphone.svg") no-repeat 5px center;
+      background-size: contain;
     }
   }
 }
